nav fixes on collapse and need fix nav color nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,16 +23,6 @@
     margin-bottom: 0;
 }
 
-.navbar-inverse {
-  height: 70px;
-  margin-top: 0;
-  margin-bottom: 0px;
-  padding-top: 10px;
-}
-
-nav#my-navbar.navbar.navbar-inverse {
-  margin-bottom: 0;
-}
 
 a.navbar-brand {
   font-size: 30px;
@@ -47,11 +37,25 @@ a {
   color: #000000;
 }
 
+nav {
+  font-size: 500px;
+}
+
 nav.shrink {
-  color: #000000;
-  padding: 0;
   background-color: #1f66f4;
   transition: background-color 1s, color 1s;
+}
+
+
+.navbar-light .navbar-nav .nav-link {
+  /*text-align: right;*/
+  color: rgb(251, 252, 253);
+}
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  /*text-align: right;*/
+  color: rgba(105, 240, 255, 0.7);
+  transition: color 1s, background-color 1s;
 }
 
 /*.navbar-inverse .navbar-nav>li>a:hover {
@@ -90,9 +94,6 @@ nav.shrink {
   margin-bottom: 40px;
 }
 
-.navbar-inverse {
-        background-image: linear-gradient(to bottom,#3c3c3c 0,#0f27dc 100%);
-  }
 
 #portfolio {
   padding: 20px;
